--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,9 +33,9 @@ spring:
       max-request-size: -1   # 设置最大的请求文件的大小
 
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/nongye?serverTimezone=Hongkong&useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://mysql:3306/crowd-funding?serverTimezone=Hongkong&useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
-    password: 123456
+    password: Kevin614718
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
